<resources>
    <string name="app_name">My Application</string>
    <string name="edit_message">Enter a keyword</string>
    <string name="button_send">Search</string>
    <string name="button_clear">Clear</string>
    <string name="distance_message">Enter distance (default 10 miles)</string>
    <string name="current_location_radio">Current location</string>
    <string name="other_location_radio">Other. Specify location</string>
    <string name="location_text">Type in the Location</string>
    <string name="err_msg">Please enter mandatory field</string>
    <string name="err_msg1">Please enter mandatory field</string>
    <string name="font_fontFamily_medium">sans-serif-medium</string>

    <string-array name="planets_array">
        <item>Default</item>
        <item>Airport</item>
        <item>Amusement Park</item>
        <item>Aquarium</item>
        <item>Art Gallery</item>
        <item>Bakery</item>
        <item>Bar</item>
        <item>Beauty Salon</item>
        <item>Bowling Alley</item>
        <item>Bus Station</item>
        <item>Cafe</item>
        <item>Campground</item>
        <item>Car Rental</item>
        <item>Casino</item>
        <item>Lodging</item>
        <item>Movie Theater</item>
        <item>Museum</item>
        <item>Night Club</item>
        <item>Park</item>
        <item>Parking</item>
        <item>Restaurant</item>
        <item>Shopping Mail</item>
        <item>Stadium</item>
        <item>Subway Station</item>
        <item>Taxi Stand</item>
        <item>Train Station</item>
        <item>Transit Station</item>
        <item>Travel Agency</item>
        <item>Zoo</item>
    </string-array>

    <string-array name="travel_modes">
        <item>Driving</item>
        <item>Bicycling</item>
        <item>Walking</item>
        <item>Transit</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_details2">DetailsActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
